--- a/Module_3/ex02/action_turtle_commands/package.xml
+++ b/Module_3/ex02/action_turtle_commands/package.xml
@@ -8,8 +8,12 @@
   <license>Apache License 2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+
+  <!-- Этот инструмент используется для генерации кода ROS 2,
+  связанного с определением сообщений и служб. -->
   <buildtool_depend>rosidl_default_generators</buildtool_depend>
   <depend>action_msgs</depend>
+  
   <member_of_group>rosidl_interface_packages</member_of_group>
   <depend>rclcpp</depend>
   <depend>geometry_msgs</depend>
