--- a/Module_4/ex03/follower_of_turtle/setup.cfg
+++ b/Module_4/ex03/follower_of_turtle/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script_dir=$base/lib/time_travel
+script_dir=$base/lib/follower_of_turtle
 [install]
-install_scripts=$base/lib/time_travel
+install_scripts=$base/lib/follower_of_turtle
